# DevoteamsAI

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  rapport.json  test_technique.md
config/: thresholds.yaml
docs/: pipeline-infrastructure.md
src/devoteam_test/: cli.py  config_loader.py  detection.py  graph.py  state.py  thresholds_schema.py
src/devoteam_test/models/: __init__.py  anomaly.py  report.py  snapshot.py
src/devoteam_test/nodes/: __init__.py  assemble_report.py  detect.py  ingest.py  recommendations.py
