[project]
name = "devoteam-test"
version = "0.1.0"
description = "Pipeline LangGraph : détection d'anomalies et recommandations (OpenRouter)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=0.2.40",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
devoteam-pipeline = "devoteam_test.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devoteam_test"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1",
]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty]
environment = { python-version = "3.12" }
